--- a/smart-buddy/package.json
+++ b/smart-buddy/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
